2008-08-24  Arek Korbik  <arkadini@gmail.com>

	* flumotion/common/bundle.py:
	Revert r6608 and r6614, as they introduced a fatal race condition
	in the unbundling code. Fixes #1116.

2008-08-23  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/service/main.py:
	  make it clear that condrestart is available.

2008-08-23  Murray Cumming  <murrayc@murrayc.com>

	* flumotion/admin/gtk/dialogs.py:
	* flumotion/admin/gtk/diskersteps.py:
	* flumotion/admin/gtk/greeter.py:
	* flumotion/admin/gtk/httpstreamersteps.py:
	* flumotion/admin/gtk/shout2steps.py:
	* flumotion/component/encoders/dirac/wizard_gtk.py:
	* flumotion/component/encoders/jpeg/wizard_gtk.py:
	* flumotion/component/encoders/mulaw/wizard_gtk.py:
	* flumotion/component/encoders/smoke/wizard_gtk.py:
	* flumotion/component/encoders/speex/wizard_gtk.py:
	* flumotion/component/encoders/theora/wizard_gtk.py:
	* flumotion/component/encoders/vorbis/wizard_gtk.py:
	* flumotion/component/producers/webcam/wizard_gtk.py:
	* flumotion/ui/simplewizard.py:
	Corrected the capitalization in dialog/assistant-page titles 
	and assistant sidebar titles, as per
	http://library.gnome.org/devel/hig-book/stable/design-text-labels.html.en#layout-capitalization
	* flumotion/component/producers/firewire/wizard_gtk.py:
	Change the Firewire title to Firewire Video. Firewire Audio 
	already has the corrected title.
	* flumotion/admin/gtk/ondemandstep.py: Change the title from 
	Demand to On Demand.
	* flumotion/component/producers/webcam/wizard_gtk.py:
	Corrected a docSection.

2008-08-23  Murray Cumming  <murrayc@murrayc.com>

	* flumotion/admin/assistant/scenarios.py:
	* flumotion/admin/gtk/configurationassistant.py:
	* flumotion/admin/gtk/consumptionsteps.py:
	* flumotion/admin/gtk/httpstreamersteps.py:
	* flumotion/admin/gtk/ondemandstep.py:
	* flumotion/admin/gtk/overlaystep.py:
	* flumotion/component/encoders/dirac/wizard_gtk.py:
	* flumotion/component/encoders/jpeg/wizard_gtk.py: